2004-03-01  Niklas Knutsson  <nq@altern.org>

	* Replace localized decimal point with dot in plot data
	* Save history (20 rows)
	* Expression entry history
	* "Save Result" -> "Store Result"

2004-02-28  Niklas Knutsson  <nq@altern.org>

	* Calculate command line expression

2004-02-26  Niklas Knutsson  <nq@altern.org>

	* Release 0.4.1
	* Fix parsing of text arguments
	* Replace strptime with g_date_set_parse

2004-02-24  Niklas Knutsson  <nq@altern.org>

	* Destroy widgets after autoconnect

2004-02-19  Niklas Knutsson  <nq@altern.org>

	* Use the new file chooser
	* "Select file to import" --> "Select file to export"

2004-02-18  Niklas Knutsson  <nq@altern.org>

	* Release 0.4
	* Fix tanh

2004-02-15  Niklas Knutsson  <nq@altern.org>

	* Reenable checks for arguments that results in infinity
	* Fix comparison with complex numbers (not solvable)

2004-02-12  Niklas Knutsson  <nq@altern.org>

	* Add giac functions in functions.xml

2004-02-11  Niklas Knutsson  <nq@altern.org>

	* Fix binomial arguments
	* Update Swedish translation

2004-02-10  Niklas Knutsson  <nq@altern.org>

	* Remove PACKAGE and VERSION warnings with giac
	* Permutations and combinations

2004-02-09  Niklas Knutsson  <nq@altern.org>

	* Start even if gnuplot is not present

2004-02-08  Niklas Knutsson  <nq@altern.org>

	* Complex numbers: log, pow, root

2004-02-07  Niklas Knutsson  <nq@altern.org>

	* Filter out all duplicate errors
	* Fix compilation without giac
	* Forward: "Copy Result" menu item
	* Forward: Correctly calculate divison by root with multiple solutions.
	* Forward: Remove unused non-portable function.

2003-11-02  Niklas Knutsson  <nq@altern.org>

	* Complex numbers...
	* Complex number printing
	* Use Newton's Binomial Formula for raised addition manager
	* Binomial function
	* Manager::set(const Integer*)
	* Start work on complex numbers

2003-10-30  Niklas Knutsson  <nq@altern.org>

	* Show argument names when too few arguments