@@ -119,6 +119,7 @@ DECLARE_BUILTIN_FUNCTION(SaveFunction);
 DECLARE_BUILTIN_FUNCTION(ConcatenateFunction);
 DECLARE_BUILTIN_FUNCTION(LengthFunction);
 DECLARE_BUILTIN_FUNCTION(DifferentiateFunction);
+DECLARE_BUILTIN_FUNCTION(LoadFunction);
 
 #ifdef HAVE_GIAC
 DECLARE_BUILTIN_FUNCTION(GiacFunction);
