@@ -226,6 +226,7 @@ class Calculator {
 	int saveFunctions(const char* file_name, bool save_global = false);	
 	long double getAngleValue(long double value);
 	Manager *setAngleValue(Manager *mngr);	
+	Matrix *importCSV(const char *file_name, int first_row = 1, string delimiter = ",", vector<string> *headers = NULL);
 	bool importCSV(const char *file_name, int first_row = 1, bool headers = true, string delimiter = ",", bool to_matrix = false, string name = "", string title = "", string category = "");
 	int testCondition(string expression);
 	
