@@ -67,6 +67,7 @@ enum {
 	MENU_ARGUMENT_TYPE_FUNCTION,	
 	MENU_ARGUMENT_TYPE_UNIT,
 	MENU_ARGUMENT_TYPE_VARIABLE,
+	MENU_ARGUMENT_TYPE_FILE,
 	MENU_ARGUMENT_TYPE_ANGLE,
 	MENU_ARGUMENT_TYPE_GIAC
 };
